--- a/Style.css
+++ b/Style.css
@@ -13,7 +13,7 @@ body {
 }
 /* The source code of the post, if displayed. */
 #cont #rawMarkdown {
-	background-color: #EEE;p
+	background-color: #EEE;
 	padding: 1em;
 }
 /* The metadata at the bottom of the post. */
